iOS supports some text encodings supposedly due to lack of TEC that aren't supported by the TEC decoder on macOS https://bugs.webkit.org/show_bug.cgi?id=179309

Reviewed by Darin Adler.

Source/WebCore:

Test: fast/encoding/legacy-ios-encodings.html

* platform/text/TextCodecICU.cpp:
(WebCore::TextCodecICU::registerEncodingNames): Remove most iOS-specific adding of names, leaving only softbank-sjis.
Most were either redundant or unnecessary.
(WebCore::TextCodecICU::registerCodecs): ditto

LayoutTests:

* fast/encoding/legacy-ios-encodings-expected.txt: Added.
* fast/encoding/legacy-ios-encodings.html: Added. Check that we don't support some old iOS-only encoding names
and check for some nonstandard encoding names that we do support (for now).


Canonical link: https://commits.webkit.org/195489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224589 268f45cc-cd09-0410-ab3c-d52691b4dbfc